<resources>
    <string name="app_name">Food Menu With Admin</string>
    <string name="title_fooditem_detail">FoodItem Detail</string>
    <string name="ingredient">Ingredient</string>
    <string name="receipe">Receipe</string>
    <string name="title_activity_main">Food Menu</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Menu</string>
    <string name="welcome_note">Welcome to India Magic</string>
    <string name="dot">.</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="create_message">Create Menu Item</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="change_button">Change</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>



</resources>
